CHEF-6514:Added Prod url
Signed-off-by: anees-progress <aushaik@progress.com>

--- a/components/automate-ui/src/index.html
+++ b/components/automate-ui/src/index.html
@@ -17,7 +17,7 @@
   </script>
   <script type="text/javascript">
     (function (c, h, e, f) {
-      let y, z;if(c && h && e && f){y = h.createElement(e);y.async = !0;y.src = 'https://d2mopladttg8fn.cloudfront.net/chef-telemetry-tracker.js?time='+new Date().getTime();z = h.getElementsByTagName(f)[0];z.appendChild(y);}
+      let y, z;if(c && h && e && f){y = h.createElement(e);y.async = !0;y.src = 'https://services.chef.io/telemetry/client-wrapper/chef-telemetry-tracker.js?time='+new Date().getTime();z = h.getElementsByTagName(f)[0];z.appendChild(y);}
     }(window, document, 'script', 'head'));
   </script>
   <script>
