--- a/components/automate-ui/src/app/modules/license/license-lockout/license-lockout.component.scss
+++ b/components/automate-ui/src/app/modules/license/license-lockout/license-lockout.component.scss
@@ -10,6 +10,15 @@
     margin-bottom: 7px;
   }
 
+  chef-icon.icon-right {
+    float: right;
+    margin-top: -36px;
+    margin-right: 13px;
+    font-size: 20px;
+    color: #3864F2;
+    cursor: pointer;
+  }
+
   .suggester-input-wrapper {
     display: flex;
     border-radius: 4px;
@@ -148,7 +157,7 @@
     display: flex;
     justify-content: flex-start;
     margin-top: 10px;
-    height: 60px;
+    height: 20px;
   }
 
   chef-alert {
@@ -171,5 +180,16 @@
     display: flex;
     flex-direction: row;
     margin-top: 2em;
+  }
+
+  .border-box {
+    width: 100%;
+    padding: 8px 0px 8px 16px;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, .25);
+
+    a {
+      text-decoration: none;
+      cursor: pointer;
+    }
   }
 }
