--- a/components/automate-ui/src/app/modules/license/license-notifications/license-notifications.component.html
+++ b/components/automate-ui/src/app/modules/license/license-notifications/license-notifications.component.html
@@ -6,9 +6,8 @@
     (dismissed)="handleNotificationDismissal(notification.id)">
     {{ notification.message }}
     <ng-container>
-      <button class="link" (click)="onTriggerBannerLicenseApply()">Apply a license</button>
-      or
-      <a href="https://www.chef.io/contact-us/" target="_blank">contact Chef</a> to continue to use Chef Automate.
+      or 
+      <button class="link" (click)="onTriggerBannerLicenseApply()">update with the new license key.</button>
     </ng-container>
   </app-notification>
 </ng-container>
