--- a/components/automate-ui/src/app/modules/license/license-lockout/license-lockout.component.html
+++ b/components/automate-ui/src/app/modules/license/license-lockout/license-lockout.component.html
@@ -50,7 +50,7 @@
           <chef-loading-spinner *ngIf="requestingLicense" size="30"></chef-loading-spinner>
         </div>
         <div class="footer">
-          <chef-button tertiary (click)="logout()">Sign out and do it later.</chef-button>
+          <chef-button class="button" tertiary (click)="logout()">Sign out and do it later.</chef-button>
         </div>
       </ng-container>
 
