--- a/components/automate-ui/src/app/modules/license/license-apply/license-apply.component.html
+++ b/components/automate-ui/src/app/modules/license/license-apply/license-apply.component.html
@@ -64,7 +64,7 @@
 
       <form class="apply" [formGroup]="applyForm" (ngSubmit)="onApplyLicenseFormSubmit()" novalidate>
         <chef-form-field>
-          <label for="licenseKey"><h3 class="subtitle">Enter License Key</h3></label>
+          <label for="licenseKey"><h3 class="subtitle">Enter License Key*</h3></label>
           <textarea name="licenseKey" id="licenseKey" formControlName="licenseKey" cols="65" rows="7" placeholder="Enter here" autofocus></textarea>
           <chef-error *ngIf="applyForm.get('licenseKey').hasError('required') && applyForm.get('licenseKey').dirty">License key required</chef-error>
         </chef-form-field>
