--- a/components/automate-ui/src/app/modules/license/license-lockout/license-lockout.component.html
+++ b/components/automate-ui/src/app/modules/license/license-lockout/license-lockout.component.html
@@ -4,7 +4,7 @@
     <ng-container *ngIf="!fetchStatusInternalError">
       <ng-container *ngIf="!trialLicenseApplied">
         <h2 id="license-lockout-label" class="title">Welcome to Chef Automate!</h2>
-        <div class="subtitle">In order to use Chef Automate, you will require a license</div>
+        <div class="subtitle">In order to use Chef Automate, you will require a license.</div>
         <div class="subtitle">Please select an option to proceed.</div>
         <div class="error-container">
           <chef-alert type="error" *ngIf="fetchStatusInternalError">
@@ -31,20 +31,36 @@
           </chef-alert>
         </div>
         <div class="border-box">
-          <a tertiary (click)="backToLicenseApply(); false">I have a license</a>
-          <p>Enter the License key and proceed.</p>
-          <a tertiary (click)="backToLicenseApply(); false">
-            <chef-icon class="icon-right">chevron_right</chef-icon>
-          </a>
+          <table class="compact-table">
+            <tr>
+              <td class="compact-cell">
+                <a tertiary (click)="backToLicenseApply(); false">I have a license</a>
+                <br><span class="regular-text">Enter the License key and proceed.</span>
+              </td>
+              <td class="compact-cell">
+                <a tertiary (click)="backToLicenseApply(); false">
+                  <chef-icon class="icon-right">chevron_right</chef-icon>
+                </a>
+              </td>
+            </tr>
+          </table>
         </div>
         <br>
         <div class="border-box">
-          <a href="https://www.chef.io/license-generation-free-trial" target="_blank" rel="noopener">I don't have a license</a>
-          <p>Generate a license key.</p>
-          <a href="https://www.chef.io/license-generation-free-trial" target="_blank" rel="noopener">
-            <chef-icon class="icon-right">chevron_right</chef-icon>
-          </a>
-
+          <table class="compact-table">
+            <tr>
+              <td class="compact-cell">
+                <a href="https://www.chef.io/license-generation-free-trial" target="_blank" rel="noopener">I don't have a
+                  license</a>
+                <br><span class="regular-text">Generate a license key.</span>
+              </td>
+              <td class="compact-cell">
+                <a href="https://www.chef.io/license-generation-free-trial" target="_blank" rel="noopener">
+                  <chef-icon class="icon-right">chevron_right</chef-icon>
+                </a>
+              </td>
+            </tr>
+          </table>
         </div>
         <div class="spinner-container">
           <chef-loading-spinner *ngIf="requestingLicense" size="30"></chef-loading-spinner>
