--- a/components/automate-ui/src/app/modules/license/license-lockout/license-lockout.component.scss
+++ b/components/automate-ui/src/app/modules/license/license-lockout/license-lockout.component.scss
@@ -12,7 +12,6 @@
 
   chef-icon.icon-right {
     float: right;
-    margin-top: -36px;
     margin-right: 13px;
     font-size: 20px;
     color: #3864F2;
@@ -192,5 +191,21 @@
       text-decoration: none;
       cursor: pointer;
     }
+  }
+
+  .compact-table {
+    border-collapse: collapse;
+    padding: 0;
+    margin: 0;
+  }
+
+  .compact-cell {
+    vertical-align: middle;
+    padding: 0;
+    margin: 0;
+  }
+
+  .regular-text {
+    font-size: .875em;
   }
 }
