Update trial form URL to include utm query param tags (#8598)
Signed-off-by: Vikram Karve <vikram.karve@progress.com>

--- a/components/automate-ui/src/app/modules/license/license-lockout/license-lockout.component.html
+++ b/components/automate-ui/src/app/modules/license/license-lockout/license-lockout.component.html
@@ -50,12 +50,12 @@
           <table class="compact-table">
             <tr>
               <td class="compact-cell">
-                <a href="https://www.chef.io/license-generation-free-trial" target="_blank" rel="noopener">I don't have a
+                <a href="https://www.chef.io/license-generation-free-trial?utm_medium=product&utm_source=AutomateUI&utm_campaign=chf_trial_licensegeneration" target="_blank" rel="noopener">I don't have a
                   license</a>
                 <br><span class="regular-text">Generate a license key.</span>
               </td>
               <td class="compact-cell">
-                <a href="https://www.chef.io/license-generation-free-trial" target="_blank" rel="noopener">
+                <a href="https://www.chef.io/license-generation-free-trial?utm_medium=product&utm_source=AutomateUI&utm_campaign=chf_trial_licensegeneration" target="_blank" rel="noopener">
                   <chef-icon class="icon-right">chevron_right</chef-icon>
                 </a>
               </td>
