make the check port changes for chef-managed database for automate ha (#8613)
* first set of changes in pg-gateway

Signed-off-by: punitmundra <pmundra@progress.com>

* change the config name from chef_manage_db -> automate_ha_chef_manage_pg

Signed-off-by: punitmundra <pmundra@progress.com>

* change the config name from chef_manage_db -> automate_ha_chef_manage_pg

Signed-off-by: punitmundra <pmundra@progress.com>

* bump the package

Signed-off-by: punitmundra <pmundra@progress.com>

* bump the packages

Signed-off-by: punitmundra <pmundra@progress.com>

---------

Signed-off-by: punitmundra <pmundra@progress.com>

--- a/terraform/a2ha-terraform/modules/automate/files/config.toml.erb
+++ b/terraform/a2ha-terraform/modules/automate/files/config.toml.erb
@@ -3399,3 +3399,9 @@ rM2p0kk=
   base_path = "automate"  
 <% end %>
 
+<% if services[:postgresql][:setup_managed_services] == false && overrides[:setup_self_managed_services] == false -%>
+[pg_gateway]
+  [pg_gateway.v1]
+    [pg_gateway.v1.sys]
+      automate_ha_chef_manage_pg = true
+<% end %>
