changes to fix infra related css issues
Signed-off-by: vinay sharma <vsharma@chef.io>

--- a/components/automate-ui/src/app/modules/infra-proxy/infra_shared/slide-panel.scss
+++ b/components/automate-ui/src/app/modules/infra-proxy/infra_shared/slide-panel.scss
@@ -1,10 +1,10 @@
 /* CSS For Slide panel */
 :host {
   display: block;
-  height: 100%;
+  height: 92%;
   width: 70%;
   position: fixed;
-  top: 0;
+  top: 70px;
   right: 0;
   background-color: $chef-white;
   overflow-x: hidden;
